# causal-geometry-neuro

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  LICENSE  README.md  debug_ibl_regions.py  modal_download_opto.py  modal_run.py  modal_test_ibl.py  pyproject.toml  test_allen_cache.py
batch2_reviewer_fixes/: exp74_debiased_cka.py  exp75_ccf_coordinate_matching.py  exp76_umap_stochasticity.py  exp77_alpha_bias_robustness.py  exp78_optogenetic_power_analysis.py  exp79_sae_optogenetic.py
data/: allen.py  gcs_cache.py  ibl.py  steinmetz.py
docs/: GEOMETRIC_TYPE_TAXONOMY.md  MECHVAL_NEURO_AUDIT_PLAN.md  PRIOR_WORK_ATLAS.md  neuro_causal_geometry_paper.md
experiments/: BATCH1_RESULTS.md  EXPERIMENT_IDEAS.md  HYPOTHESES.md  VALIDITY_AUDIT_MECHVAL_V1.md  batch0_steinmetz_validation.md  debug_ibl.py  exp10_direction_vs_subspace.py  exp11_linear_vs_nonlinear.py  exp13_static_vs_dynamic.py  exp14_geometric_type_classifier.py  exp17_neural_factor_bank.py  exp20_jpca_rotation.py  exp22_geometric_type_prediction.py  exp23_subsample_control.py  exp24_robustness_controls.py  exp2_cka_vs_grassmannian.py  exp30_communication_subspace_grassmannian.py  exp31_causal_representation_learning.py  exp32_causal_discovery_interregion.py  exp33_causal_abstraction_geometry.py  exp34_distributional_invariance.py  exp37_spd_riemannian.py  exp39_fisher_rao.py  exp3_sheaf_cohomology_ibl.py  exp42_real_iia.py  exp43_clustering_validation.py  exp44_iia_causal_direction.py  exp46_ibl_cross_dataset.py  exp47_silencing_validation.py  exp48_sufficiency.py  exp49_specificity.py  (+12 more)
(+367 files in other folders)
