[project]
name = "neuro-causal-geometry"
version = "0.1.0"
description = "Mechanism identity across neural populations via causal geometry on the Grassmannian"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "torch>=2.1,<2.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "requests>=2.31",
]

[project.optional-dependencies]
ibl = ["ONE-api>=2.7", "ibllib>=2.36"]
pynapple = ["pynapple>=0.7"]
geometry-ext = ["geomstats>=2.7", "pymanopt>=2.2"]
das = ["pyvene>=0.1"]
notebooks = ["jupyter>=1.0", "marimo>=0.9"]
gcs = ["google-cloud-storage>=2.14"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "geometry", "experiments"]

[tool.ruff]
line-length = 100
